--- a/logstash/Dockerfile
+++ b/logstash/Dockerfile
@@ -1,3 +1,4 @@
+# IF THE DATA WILL BE IMPORTED WITH LOGSTACHE MQTT, THESE OPERATIONS ARE DONE, IF IT WILL BE IMPORTED WITH KAFKA, THERE IS NO NEED.
 FROM docker.elastic.co/logstash/logstash:7.17.9
 
 # Install the MQTT input plugin
